# bazel-applications

./: BUILD.bazel  MODULE.bazel  Taskfile.yml  compose.yml  deps.bzl  go.mod  go.sum
grpc-server/: BUILD.bazel  go.mod  go.sum  main.go
hello-world/: BUILD.bazel  go.mod
proto/: go.mod
proto/hello/v1/: BUILD.bazel  helloworld.pb.go  helloworld.proto
rabbitmq-hello-world-receive/: BUILD.bazel  main.go
rabbitmq-hello-world-send/: BUILD.bazel  main.go
rabbitmq-worker-queues-new-task/: BUILD.bazel
rabbitmq-worker-queues-worker/: BUILD.bazel  worker.go
third-party-library/: BUILD.bazel  go.mod  main.go
