# rules_go
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "rules_go")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.3")

# gazelle
bazel_dep(name = "gazelle", version = "0.39.1", repo_name = "gazelle")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_uuid",
    "com_github_rabbitmq_amqp091_go",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)

# protobuf
bazel_dep(name = "protobuf", version = "28.2")
