load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "grpc-server_lib",
    srcs = ["main.go"],
    importpath = "github.com/pecolynx/bazel-applications/grpc-server",
    visibility = ["//visibility:private"],
    deps = ["//proto/hello/v1:helloworld_go_proto"],
)

go_binary(
    name = "grpc-server",
    embed = [":grpc-server_lib"],
    visibility = ["//visibility:public"],
)
