load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "rabbitmq-hello-world-receive_lib",
    srcs = ["main.go"],
    importpath = "github.com/pecolynx/bazel-applications/rabbitmq-hello-world-receive",
    visibility = ["//visibility:private"],
    deps = ["@com_github_rabbitmq_amqp091_go//:amqp091-go"],
)

go_binary(
    name = "rabbitmq-hello-world-receive",
    embed = [":rabbitmq-hello-world-receive_lib"],
    visibility = ["//visibility:public"],
)
