load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "rabbitmq-worker-queues-new-task_lib",
    srcs = ["new_task.go"],
    importpath = "github.com/pecolynx/bazel-applications/rabbitmq-worker-queues-new-task",
    visibility = ["//visibility:private"],
    deps = ["@com_github_rabbitmq_amqp091_go//:amqp091-go"],
)

go_binary(
    name = "rabbitmq-worker-queues-new-task",
    embed = [":rabbitmq-worker-queues-new-task_lib"],
    visibility = ["//visibility:public"],
)
