load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "third-party-library_lib",
    srcs = ["main.go"],
    importpath = "github.com/pecolynx/bazel-applications/third-party-library",
    visibility = ["//visibility:private"],
    deps = ["@com_github_google_uuid//:uuid"],
)

go_binary(
    name = "third-party-library",
    embed = [":third-party-library_lib"],
    visibility = ["//visibility:public"],
)
